--- a/requirements.txt
+++ b/requirements.txt
@@ -87,6 +87,7 @@ retrying==1.3.3
 scikit-learn==0.24.1
 scipy==1.6.0
 Send2Trash==1.5.0
+setuptools==0.7.3
 six==1.15.0
 sklearn==0.0
 sniffio==1.2.0
